Add API key generator endpoint, DTOs, exceptions and new entities

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -9,3 +9,7 @@ spring.jpa.show-sql=true
 
 springdoc.swagger-ui.url=/swagger.yml
 springdoc.swagger-ui.path=/
+
+server.servlet.context-path=/v1
+
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.SecurityAutoConfiguration
