--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -13,3 +13,6 @@ springdoc.swagger-ui.path=/
 server.servlet.context-path=/v1
 
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.SecurityAutoConfiguration
+
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migrations
